--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,11 @@
     </string-array>
     <string name="title_activity_symptoms_detail">SymptomsDetailActivity</string>
     <string name="title_activity_suggestions">SuggestionsActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="these_are_the_normal_symptoms_don_t_worry_please_wait_for_a_day_and_have_lots_of_liquids_avoid_spicy_junk_oily_foods">These are the normal symptoms don\'t worry,Please wait for a day and have lots of liquids.Avoid spicy/junk/oily foods</string>
+    <string name="title_activity_suggestion2">SuggestionActivity2</string>
+    <string name="title_activity_consult_doctor">ConsultDoctor</string>
+    <string name="consult_a_doctor_immediately">Consult a Doctor Immediately</string>
 </resources>
